--- a/valmari/practice.html
+++ b/valmari/practice.html
@@ -74,7 +74,7 @@
 
 
 
-    <!-- Бесплатный вебинар -->
+    <!-- Бесплатный вебинар g-->
     <main class="main">
         <div class="main__container container">
             <div class="content__head">
