--- a/valmari/practice.html
+++ b/valmari/practice.html
@@ -97,6 +97,36 @@
         </div>
     </main>
 
+     <!--fotolar-->
+<main>
+    <section id="xodim">
+        <h1 class="text-center mt-3 fc">Специалисты</h1>
+        <div class="container">
+            <div class="cards" style="background-image: url('images/byRanoGafurova-70351.jpg')">
+                <div class="cards__inner p-5 ">
+                    <h3 class="text-danger">Lorem ipsum dolor.</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim hic illum in neque nesciunt perferendis, reprehenderit sit voluptate. Maxime quaerat, unde! Debitis, minus, quam. Aut nisi officia quisquam rerum veritatis.</p>
+                </div>
+
+            </div>
+
+            <div class="cards" style="background-image: url('images/byRanoGafurova-70624.jpg')">
+                <div class="cards__inner p-5 ">
+                    <h3 class="text-danger">Lorem ipsum dolor.</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim hic illum in neque nesciunt perferendis, reprehenderit sit voluptate. Maxime quaerat, unde! Debitis, minus, quam. Aut nisi officia quisquam rerum veritatis.</p>
+                </div>
+
+            </div>
+            <div class="cards" style="background-image: url('images/byRanoGafurova-70549.jpg')">
+                <div class="cards__inner p-5 ">
+                    <h3 class="text-danger">Lorem ipsum dolor.</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim hic illum in neque nesciunt perferendis, reprehenderit sit voluptate. Maxime quaerat, unde! Debitis, minus, quam. Aut nisi officia quisquam rerum veritatis.</p>
+                </div>
+
+            </div>
+
+        </div>
+
 
 
 
